--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "material-ui-cra",
   "version": "5.0.0",
   "private": true,
+  "homepage": "https://matzgo.com/",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node update-htaccess.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -17,7 +18,9 @@
     "@mui/material": "latest",
     "devicons-react": "^1.4.1",
     "react": "latest",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "latest",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "latest"
   },
